--- a/src/Components/StartAudioOverlay/StartAudioOverlayStyle.scss
+++ b/src/Components/StartAudioOverlay/StartAudioOverlayStyle.scss
@@ -5,7 +5,7 @@
   background-color: rgba(0, 0, 0, 0.7);
   width: 100%;
   height: 100%;
-  z-index: 99;
+  z-index: $start-overlay-z;
 
   .start-button-container {
     display: flex;
